--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SUPABASE_URL=https://xzvmwyblnxfftkhzihvo.supabase.co
-VITE_SUPABASE_ANON_KEY=sb_publishable_BPjkM3bpOpQlNo9Za6lNyg_QlZU-kY6
+VITE_SUPABASE_URL=https://irwmhptofspkublwdzju.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_5st4zGhkm0PNthg5PAJzDg_k7y9BnPL
